--- a/rust/index.html
+++ b/rust/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-<title>オレオレindex</title>
+<title>RSS2HTML</title>
 <meta charset="UTF-8">
 </head>
 <body>
-<h1>オレオレindex</h1>
-
-<h3>RSS2HTML</h3>
-<form method="get" action="/rss.tera" >
+<h1>RSS2HTML</h1>
+<form method="get" action="rss.tera" >
 <p>
 RSS-URL：<input type="text" name="url" size="40">
 </p>
 <p>
 <input type="submit" value="送信"><input type="reset" value="リセット">
 </p>
-</form> 
-
+</form>
 </body>
 </html>
